# pilapse2

./: README.md  pyproject.toml
pilapse2/: __init__.py
src/: __init__.py  pyproject.toml  setup.cfg
src/make_video/: __main__.py
src/pilapse2/: __init__.py  make_video.py
utils/: build.sh
