[metadata]
name = pilapse2
version = attr: pilapse2.__version__
description = PiCamera2 Stuff
authors = Mark Dyer
author_email = heymarky@gmail.com
keywords =
    raspberry pi
    camera
    picamera2

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Shape Internal
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

license_files =
    ../LICENSE

[options]
install_requires =
    requests

include_package_data = False
python_requires = >= 3.6
package_dir=
    =.

packages=find:
test_suite = tests

tests_require =
  {tests_require}

[options.packages.find]
where=.

[options.entry_points]
console_scripts =
    make-video = pilapse2.make_video:main
